[package]
name = "taurus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
crossterm = "0.28.1"
ratatui = "0.29.0"
rustls = "0.23.23"
serde = {version = "1.0.218", features=["derive"]}
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tui-prompts = "0.5.0"
url = "2.5.4"
